macro/src/snapshots/rust_sitter_macro__tests__enum_recursive.snap
---
source: macro/src/lib.rs
expression: "rustfmt_code(&expand_grammar(parse_quote!\n{\n    mod grammar\n    {\n        #[derive(rust_sitter::Rule)] #[language] pub enum Expression\n        {\n            Number(#[leaf(re(r\"\\d+\"))] i32),\n            Neg(#[leaf(\"-\")] (), Box<Expression>),\n        }\n    }\n}).to_token_stream().to_string())"
---
mod grammar {
    impl Expression {
        pub fn language() -> ::rust_sitter::tree_sitter::Language {
            unsafe extern "C" {
                fn tree_sitter_Expression() -> ::rust_sitter::tree_sitter::Language;
            }
            unsafe { tree_sitter_Expression() }
        }
        #[doc = r" Parse an input string according to the grammar. Returns either any parsing errors that happened, or a"]
        #[doc = "[`Expression`]"]
        #[doc = r" instance containing the parsed structured data."]
        pub fn parse(
            input: &str,
        ) -> core::result::Result<Self, Vec<::rust_sitter::errors::ParseError>> {
            ::rust_sitter::__private::parse(input, Self::language)
        }
    }
    impl ::rust_sitter::Extract<Expression> for Expression {
        type LeafFn<'a> = ();
        #[allow(non_snake_case)]
        fn extract<'a>(
            node: Option<::rust_sitter::tree_sitter::Node>,
            source: &[u8],
            _last_idx: usize,
            _last_pt: ::rust_sitter::tree_sitter::Point,
            _leaf_fn: Option<Self::LeafFn<'a>>,
        ) -> Self {
            let node = node.expect("No node found");
            let mut cursor = node.walk();
            assert!(
                cursor.goto_first_child(),
                "Could not find a child corresponding to any enum branch"
            );
            loop {
                let node = cursor.node();
                match node.kind() {
                    "Expression_Number" => {
                        return ::rust_sitter::__private::extract_struct_or_variant(
                            node,
                            move |cursor, last_idx, last_pt| {
                                Expression::Number({
                                    ::rust_sitter::__private::extract_field::<i32, _>(
                                        cursor, source, last_idx, last_pt, "0", None,
                                    )
                                })
                            },
                        )
                    }
                    "Expression_Neg" => {
                        return ::rust_sitter::__private::extract_struct_or_variant(
                            node,
                            move |cursor, last_idx, last_pt| {
                                Expression::Neg(
                                    {
                                        ::rust_sitter::__private::extract_field::<(), _>(
                                            cursor, source, last_idx, last_pt, "0", None,
                                        )
                                    },
                                    {
                                        ::rust_sitter::__private::extract_field::<Box<Expression>, _>(
                                            cursor, source, last_idx, last_pt, "1", None,
                                        )
                                    },
                                )
                            },
                        )
                    }
                    _ => {
                        if !cursor.goto_next_sibling() {
                            panic!("Could not find a child corresponding to any enum branch")
                        }
                    }
                }
            }
        }
    }
    impl ::rust_sitter::rule::Rule<Expression> for Expression {
        fn produce_ast() -> String {
            String::new()
        }
        fn rule_name() -> &'static str {
            "Expression"
        }
    }
}
