macro/src/snapshots/rust_sitter_macro__tests__enum_transformed_fields.snap
---
source: macro/src/lib.rs
expression: "rustfmt_code(&expand_grammar(parse_quote!\n{\n    mod grammar\n    {\n        use rust_sitter::Rule; #[derive(Rule)] #[language] pub enum Expression\n        { Number(#[leaf(re(r\"\\d+\"))] i32), }\n    }\n}).to_token_stream().to_string())"
---
mod grammar {
    use rust_sitter::Rule;
    impl ::rust_sitter::rule::Language for Expression {
        fn produce_grammar() -> String {
            String::new()
        }
        fn language() -> ::rust_sitter::tree_sitter::Language {
            unsafe extern "C" {
                fn tree_sitter_Expression() -> ::rust_sitter::tree_sitter::Language;
            }
            unsafe { tree_sitter_Expression() }
        }
        #[doc = r" Parse an input string according to the grammar. Returns either any parsing errors that happened, or a"]
        #[doc = "[`Expression`]"]
        #[doc = r" instance containing the parsed structured data."]
        fn parse(input: &str) -> ::rust_sitter::ParseResult<Self> {
            ::rust_sitter::__private::parse(input, Self::language)
        }
    }
    impl ::rust_sitter::Extract<Expression> for Expression {
        type LeafFn<'a> = ();
        #[allow(non_snake_case)]
        fn extract<'a, 'tree>(
            _ctx: &mut ::rust_sitter::extract::ExtractContext<'_>,
            node: Option<::rust_sitter::tree_sitter::Node<'tree>>,
            source: &[u8],
            _leaf_fn: Option<Self::LeafFn<'a>>,
        ) -> Result<Self, ::rust_sitter::extract::ExtractError<'tree>> {
            let node = node.ok_or_else(|| {
                ::rust_sitter::error::ExtractError::missing_node(_ctx, stringify!(Expression))
            })?;
            let mut cursor = node.walk();
            assert!(
                cursor.goto_first_child(),
                "Could not find a child corresponding to any enum branch"
            );
            loop {
                let node = cursor.node();
                match node.kind() {
                    "Expression_Number" => {
                        return ::rust_sitter::__private::extract_struct_or_variant(
                            node,
                            move |state| {
                                Ok(Expression::Number({
                                    ::rust_sitter::__private::extract_field::<i32, _>(
                                        state, source, "0", None,
                                    )
                                }?))
                            },
                        )
                    }
                    k => {
                        if !cursor.goto_next_sibling() {
                            return Err(::rust_sitter::error::ExtractError::missing_enum(_ctx, k));
                        }
                    }
                }
            }
        }
    }
    impl ::rust_sitter::rule::Rule<Expression> for Expression {
        fn produce_ast() -> String {
            String::new()
        }
        fn rule_name() -> &'static str {
            "Expression"
        }
    }
}
